...
        android:gravity="center"
        android:maxLines="3"
        android:textColor="#000000"
        android:textSize="@dimen/text_medium" />

    <LinearLayout
        android:id="@+id/topRatingContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="0dp"
        android:orientation="vertical"
        android:visibility="visible">

        <LinearLayout
            android:id="@+id/ratingContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="visible">

            <TextView
                android:id="@+id/ratingView0"
                style="@style/NPSCircle"
                android:layout_marginEnd="2dp"
                android:layout_marginRight="2dp"
                android:gravity="center_vertical|center_horizontal"
                android:tag="0"
                android:text="0" />

            <TextView
                android:id="@+id/ratingView1"
                style="@style/NPSCircle"
                android:layout_marginEnd="2dp"
                android:layout_marginRight="2dp"
                android:gravity="center_vertical|center_horizontal"
                android:tag="1"
                android:text="1" />

            <TextView
                android:id="@+id/ratingView2"
                style="@style/NPSCircle"
                android:layout_marginEnd="2dp"
                android:layout_marginRight="2dp"
                android:gravity="center_vertical|center_horizontal"
                android:tag="2"
                android:text="2" />

            <TextView
                android:id="@+id/ratingView3"
                style="@style/NPSCircle"
                android:layout_marginEnd="2dp"
                android:layout_marginRight="2dp"
                android:gravity="center_vertical|center_horizontal"
                android:tag="3"
                android:text="3" />

            <TextView
                android:id="@+id/ratingView4"
                style="@style/NPSCircle"
                android:layout_marginEnd="2dp"
                android:layout_marginRight="2dp"
                android:gravity="center_vertical|center_horizontal"
                android:tag="4"
                android:text="4" />

            <TextView
                android:id="@+id/ratingView5"
                style="@style/NPSCircle"
                android:layout_marginEnd="2dp"
                android:layout_marginRight="2dp"
                android:gravity="center_vertical|center_horizontal"
                android:tag="5"
                android:text="5" />

            <TextView
                android:id="@+id/ratingView6"
                style="@style/NPSCircle"
                android:layout_marginEnd="2dp"
                android:layout_marginRight="2dp"
                android:gravity="center_vertical|center_horizontal"
                android:tag="6"
                android:text="6" />

            <TextView
                android:id="@+id/ratingView7"
                style="@style/NPSCircle"
                android:layout_marginEnd="2dp"
                android:layout_marginRight="2dp"
                android:gravity="center_vertical|center_horizontal"
                android:tag="7"
                android:text="7" />

            <TextView
                android:id="@+id/ratingView8"
                style="@style/NPSCircle"
                android:layout_marginEnd="2dp"
                android:layout_marginRight="2dp"
                android:gravity="center_vertical|center_horizontal"
                android:tag="8"
                android:text="8" />

            <TextView
                android:id="@+id/ratingView9"
                style="@style/NPSCircle"
                android:layout_marginEnd="2dp"
                android:layout_marginRight="2dp"
                android:gravity="center_vertical|center_horizontal"
                android:tag="9"
                android:text="9" />

            <TextView
                android:id="@+id/ratingView10"
                style="@style/NPSCircle"
                android:layout_marginEnd="0dp"
                android:layout_marginRight="0dp"
                android:gravity="center_vertical|center_horizontal"
                android:tag="10"
                android:text="10" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/likelyContainer"
            android:layout_width="match_parent"
...
